# livinsai_chart_report_demo_for_FC

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  deploy.sh  dev.sh  init.sh  pyproject.toml
docs/: INDEX.md  data_schema.md  deployment.md  testing.md
docs/architecture/: agent.md  api.md  decisions.md  frontend.md  overview.md
frontend/: next.config.ts  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
frontend/__tests__/components/: ChatContainer.test.tsx  MessageBubble.test.tsx  PdfPanel.test.tsx
frontend/__tests__/hooks/: useChat.test.ts  useLocalStorage.test.ts  usePdf.test.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/config/: fonts.ts
frontend/src/hooks/: useChat.ts  useLocalStorage.ts  usePdf.ts
frontend/src/lib/: api.ts  storage.ts  types.ts
reports/: output_5  output_6  output_7  output_8
scripts/: debug_agent.py
src/livins_report_agent/: config.py  dependencies.py  main.py  models.py
src/livins_report_agent/agent/: graph.py
src/livins_report_agent/apartment_client/: __init__.py  http_client.py  mock_client.py  protocol.py
src/livins_report_agent/api/: chat.py  reports.py
src/livins_report_agent/tools/: code_execution.py  query.py  skill.py
tests/: conftest.py
tests/e2e/: test_chat_flow.py  test_complex_report.py  test_frontend_contract.py  test_real_agent.py  test_report_download.py
tests/unit/: test_client.py  test_config.py  test_models.py
tests/unit/test_agent/: test_graph.py
tests/unit/test_skills/: test_skills_prompt.py
tests/unit/test_tools/: test_query.py  (+1 more)
(+13 files in other folders)
